--- a/css/login.css
+++ b/css/login.css
@@ -18,7 +18,7 @@
 .login{
     justify-content: center;
     align-items: center;
-    display: flex;
+    /* display: flex; */
     height: 500px;
 }
 *::-webkit-scrollbar-track{
@@ -69,7 +69,7 @@ html{
 }
 
 .form-container{
-    display: flex;
+    /* display: flex; */
     align-items: center;
     justify-content: center;
     padding:2rem;
