--- a/css/login.css
+++ b/css/login.css
@@ -49,7 +49,7 @@ html{
 }
 
 .btn1{
-    background-color: rgb(39, 174, 96);
+    background-color: #00ADB5;
 }
 
 .btn2{
@@ -69,17 +69,17 @@ html{
 }
 
 .form-container{
-    /* display: flex; */
-    align-items: center;
+    display: flex;
     justify-content: center;
     padding:2rem;
     min-height: 100vh;
 }
 
 .form-container form{
+    justify-content: center;
     width: 35rem;
     border-radius: .5rem;
-    background-color: rgb(135, 203, 185);
+    background-color: #222831;
     padding:2rem;
     text-align: center;
 }
@@ -97,7 +97,7 @@ html{
     padding:0.5rem 1.4rem;
     font-size: 1.2rem;
     color:black;
-    background-color: rgb(232, 240, 254);
+    background-color: rgb(255, 255, 255);
     margin:0.8rem 0;
 }
 
